<resources>
    <string name="app_name">GitHub Users</string>
    <string name="repositories_title">Repositories:</string>
    <string name="language_stats_title">Language</string>
    <string name="forks_stats_title">Forks</string>
    <string name="stars_stats_title">Stars</string>
    <string name="repository_stats_pattern">%s: %s</string>
    <string name="error_message">Something went wrong…</string>
    <string name="try_again">Try again</string>
    <string name="try_again_underline"><u>Try again</u></string>
    <string name="error_repo_list_text">Error loading the repository list</string>
    <string name="internet_connection_lost">Internet connection lost</string>
    <string name="internet_connection_restored">Internet connection restored</string>
</resources>