<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/main_progress_indicator_frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:colorBackground"
        android:clickable="true"
        android:focusable="true"
        android:translationZ="@dimen/main_progress_indicator_frame_layout_translation_z"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_error_frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?android:colorBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:translationZ="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/main_error_image_view"
            android:layout_width="@dimen/error_image_width"
            android:layout_height="@dimen/error_image_height"
            app:srcCompat="@drawable/ic_error_cat" />

        <TextView
            android:id="@+id/main_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/error_text_margin_top"
            android:text="@string/error_message"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_error_button_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/try_again_button_margin_top"
            android:text="@string/try_again" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/avatar_frame_layout"
        android:layout_width="@dimen/user_fragment_avatar_width"
        android:layout_height="@dimen/user_fragment_avatar_height"
        android:layout_marginTop="@dimen/user_fragment_avatar_width_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/avatar_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:translationZ="@dimen/user_fragment_avatar_progress_indicator_translation_z"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/AvatarImageView" />

    </FrameLayout>

    <TextView
        android:id="@+id/login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_fragment_login_text_view"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar_frame_layout"
        tools:text="mojombo" />

    <TextView
        android:id="@+id/repositories_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/repositories_title_text_view_margin_start"
        android:layout_marginTop="@dimen/repositories_title_text_view_margin_top"
        android:paddingBottom="@dimen/repositories_title_text_view_padding_bottom"
        android:text="@string/repositories_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_text_view" />

    <FrameLayout
        android:id="@+id/repositories_frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repositories_title_text_view">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/repositories_progress_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/error_repo_list_frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:translationZ="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_repo_list_text"
                android:textAppearance="@style/Text.Error" />

            <TextView
                android:id="@+id/error_repo_list_try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/error_repo_list_try_again_button_padding"
                android:text="@string/try_again_underline"
                android:textAppearance="@style/Text.Clickable" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repositories_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>